issue450/test_compress_1.mlir.log
within split at ./issue450/test_compress_1.mlir.decomposed.mlir:1 offset :4:10: error: failed to legalize operation 'torch.aten.nonzero'
    %0 = torch.aten.nonzero %arg1 : !torch.vtensor<[3],si64> -> !torch.vtensor<[2],si64>
         ^
within split at ./issue450/test_compress_1.mlir.decomposed.mlir:1 offset :4:10: note: see current operation: %3 = "torch.aten.nonzero"(%0) : (!torch.vtensor<[3],si64>) -> !torch.vtensor<[2],si64>
